--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@prisma/client": "^5.7.1",
     "argon2": "^0.31.2",
     "nodemailer": "^6.9.8",
     "passport": "^0.7.0",
